--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,16 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^8.0",
         "anlutro/l4-settings": "^1.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
         "mcamara/laravel-localization": "^1.7",
-        "mckenziearts/laravel-notify": "^2.3",
         "monarobase/country-list": "^3.4",
         "santigarcor/laratrust": "^7.1",
         "tinymce/tinymce": "^6.4",
@@ -26,10 +25,10 @@
         "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.3"
     },
     "config": {
